fix "jumping" list due to todo() => update list

--- a/scss/_addTodo.scss
+++ b/scss/_addTodo.scss
@@ -2,89 +2,70 @@
 @use 'mixins';
 
 
-.addTodoContainer{
+.addTodoContainer {
 
-grid-area: 1/1/10/25;
+	grid-area: 1/1/10/25;
 
-width: 100%;
-height: 100%;
-display: flex;
-align-items: center;
-justify-content: center;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
 
-	@include mixins.devices(desktop) {
+	@include mixins.devices(desktop) {}
+}
+
+
+
+.inputContainer {
+
+
+	height: 80%;
+	width: 90%;
+	max-width: 700px;
+	max-height: 450px;
+	background-color: brown;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+
+
+
+	&___text {
+		background-color: aliceblue;
+		margin: 0;
+		padding: 0;
 
 	}
-}
+
+	&___titel {
+
+		height: 10%;
+
+		width: 70%;
+		max-width: 400px;
 
 
-
-.inputContainer{
-
-
-height: 80%;
-width: 90%;
-max-width: 700px;
-max-height: 450px;
-background-color: brown;
-display: flex;
-flex-direction: column;
-justify-content: space-evenly;
-align-items: center;
-position: relative;
-
-&___closeButtonContainer{
-	top: 2%;
-	right: 2%;
-width: 100%;
-height: 10%;
-display: flex;
-align-items: start;
-justify-content: end;
-position: absolute;
-&___closeButton{
-
-	background-color: burlywood;
-	
-	
-	
 	}
 
-}
+	&___titel:focus {
+		outline: none;
+		border: none;
 
-
-&___titel{
-
-
-width: 70%;
-max-width: 400px;
-
-
-}
-
-&___titel{
-
-height: 10%;
-	
 	}
 
 
 
 
 
-&___button{
+	&___button {
 
 
-        @include mixins.button() {
-    
-    
-        
-        }
+		@include mixins.button() {}
 
-}
+	}
 
 
 }
-
-
