--- a/scss/_todos.scss
+++ b/scss/_todos.scss
@@ -4,7 +4,12 @@
 
 
 
+.hidden{
 
+    visibility: hidden;
+    
+    }
+    
 
   
 .hide{
