--- a/scss/style.css
+++ b/scss/style.css
@@ -16,27 +16,20 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  position: relative;
 }
-.inputContainer___closeButtonContainer {
-  top: 2%;
-  right: 2%;
-  width: 100%;
-  height: 10%;
-  display: flex;
-  align-items: start;
-  justify-content: end;
-  position: absolute;
-}
-.inputContainer___closeButtonContainer___closeButton {
-  background-color: burlywood;
+.inputContainer___text {
+  background-color: aliceblue;
+  margin: 0;
+  padding: 0;
 }
 .inputContainer___titel {
+  height: 10%;
   width: 70%;
   max-width: 400px;
 }
-.inputContainer___titel {
-  height: 10%;
+.inputContainer___titel:focus {
+  outline: none;
+  border: none;
 }
 .inputContainer___button {
   width: 20%;
@@ -62,6 +55,10 @@
   width: 20%;
   max-width: 70px;
   height: 30px;
+}
+
+.hidden {
+  visibility: hidden;
 }
 
 .hide {
